solved the link not working properly
Did not make a whole lot of sense but I had the image with a property of top:-30% and apparently the -ve sign is not part of the original viewport os that messed up some stuff

--- a/style.css
+++ b/style.css
@@ -43,9 +43,8 @@
     justify-content: center;
     align-items: center;
     position: fixed;
-    top: -30%;
     left: 0;
     right: 0;
-    bottom: 0%;
+    bottom: 60%;
     color: aliceblue;
 }
